can compile the regression tests, trying to find how to run all of them